Bug 49441 - [test case] line breaks inside words
Summary: [test case] line breaks inside words
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml renderer (other bugs)
Version First Reported In: 3.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-10-20 15:08 UTC by Daniel Naber
Modified: 2009-04-02 22:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
testcase (108 bytes, text/html)
2008-04-06 03:46 UTC, George Goldberg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Naber 2002-10-20 15:08:22 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

Load the following file into a big konqueror window. Then slowly(!) resize the window, i.e. make it less wide. Sometimes khtml adds line breaks inside the word "ABCDEFGH", while e.g. mozilla only adds line breaks at whitespace.

<html>
<head></head>
<body leftmargin="380" marginwidth="380">

<p>ABCDEFGH ABC</p>

</body>
Comment 1 Daniel Naber 2002-10-22 21:06:54 UTC
only affects the first line, seems this is what the comment "### not 100% correct for  
first-line" refers to in RenderText::calcMinMaxWidth() 
Comment 2 Matthew Mellon 2003-06-25 18:29:22 UTC
I observed that my khtml (3.1) breaks after the </a> in <a href="blah">blah</a>, (note no 
whitespace before the comma). 
Comment 3 Stephan Kulow 2003-10-24 17:07:15 UTC
strange bug :)
Comment 4 Sashmit Bhaduri 2004-04-01 00:59:14 UTC
I can't confirm with HEAD
Comment 5 Leo Savernik 2005-02-13 22:38:24 UTC
Can't be reproduced.

However, *this* can be reproduced:

data:text/html,<body leftmargin="380" marginwidth="380"><p>AB<b>CD</b>EFGH ABC</p>
Comment 6 George Goldberg 2008-04-06 03:45:25 UTC
can still be reproduced on svn trunk r793457 using the comment #5.
Comment 7 George Goldberg 2008-04-06 03:46:06 UTC
Created attachment 24217 [details]
testcase

testcase that can still be reproduced.
Comment 8 Dario Andres 2009-01-04 21:48:57 UTC
Still valid here using:

Qt: 4.4.3 + qt-copy-patches-889120
KDE: 4.1.87 (KDE 4.1.87 (KDE 4.2 >= 20090101))
kdelibs svn rev. 905636 / kdebase svn rev. 905636
on ArchLinux x86_64 - Kernel 2.6.27.10
Comment 9 Germain Garand 2009-04-02 01:57:47 UTC
SVN commit 948015 by ggarand:

.fix vintage line-breaking bug
 surely I must be the first guy in a decade to really understand that silly
 code (whee, i'm so proud). Let's document, before this knowledge is lost
 again.

BUG: 49441


 M  +4 -16     bidi.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=948015
Comment 10 Germain Garand 2009-04-02 22:19:18 UTC
SVN commit 948353 by ggarand:

automatically merged revision 948015:
.fix vintage line-breaking bug
 surely I must be the first guy in a decade to really understand that silly
 code (whee, i'm so proud). Let's document, before this knowledge is lost
 again.

BUG: 49441

 M  +4 -16     bidi.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=948353