automatically merged revision 948015: .fix vintage line-breaking bug  surely I must be the first guy in a decade to really understand that silly  code (whee, i'm so proud). Let's document, before this knowledge is lost  again.

BUG: 49441

svn path=/branches/KDE/4.2/kdelibs/; revision=948353